# Meca

./: Cargo.toml  README.md
.github/workflows/: main.yml
resources/: metadata.json
src/: config.rs  globals.rs  main.rs  utils.rs
src/ndk/: metadata.rs  mod.rs
src/ndk/commands/: install.rs  list.rs  mod.rs
