[package]
name = "meca"
version = "0.1.0"
authors = ["Raphaël Thériault <raphael_theriault@outlook.com>"]
edition = "2018"
license = "MIT"
description = "Native Android development made easy"

[dependencies]
anyhow = "1.0.26"
console = "0.10.0"
dialoguer = "0.5.0"
dirs = "2.0.2"
indicatif = "0.14.0"
once_cell = "1.3.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
sha-1 = "0.8.2"
structopt = "0.3.11"
toml = "0.5.6"
ureq = "0.11.4"
walkdir = "2.3.1"
zip = "0.5.5"
